--- a/WinFormsApp1/Properties/Resources.resx
+++ b/WinFormsApp1/Properties/Resources.resx
@@ -139,4 +139,10 @@
   <data name="settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gear32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="starEmpty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\starEmpty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="starFilled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\starFilled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
